# ChatGPT

./: .gitignore  README.md  pyproject.toml
src/chatgpt_app/: __init__.py  conversation.py  main.py
tests/: test_cli.py  test_conversation.py
